Version 0.85->0.85u1
checkUseRecycleBin.text=Use system recycle &bin for deleting files


Version 0.83->0.85
NEW FILES:
ExportLinksTask.properties
ImportLinksTask.properties


UpdateDialog.properties
============================
New:
stateOldPlugin=NOT SUPPORTED


InformationDialog.properties
===================================
New:
connectionLabel.text=Co&nnection:

Changed:
was:
InformationDialog.title=File Information
new:
InformationDialog.title=Download Information


DownloadTask.properties
====================================
New:
InsertPassword=Insert Password
ErrorDuringDownload=Error during download.\nStream was closed unexpectedly.\nFile is not complete
fileAlreadyExistsTooltip=File already exists on the disk


MainApp.properties
====================================
#Changed:
paypalSupportAction.Action.shortDescription=<html><b>Please, consider a donation to this project!</b><br>FreeRapid downloader is distributed as freeware, <br>but if you wish to express your appreciation for the time and resources <br>the author has spent developing, <br>we do accept and appreciate monetary donations.</html>


Removed:
sortbyServerAction.Action.text=Sort by &Server
sortbyServerAction.Action.shortDescription=Sort selected downloads by server name
sortbyServerAction.Action.accelerator=
sortbyServerAction.Action.smallIcon=${iconsPath}sort_small.gif


New:
speedSlider.toolTipText=Drag to change global speed limit for all files

#do not translate, just place it there:
searchDefaultIcon=${iconsPath}search.png

manageSearchEngines.Action.text=&Manage search engines...
manageSearchEngines.Action.shortDescription=Open search engine selection page in web browser
howToManageSearchEngines=To add a new search engine, browse this site and make your choice.\nRight-click the download link and choose "Save linked content as" (or something similar),\nand save the file into the "search" folder inside FRD's root folder.

checkPluginStatuses.Action.text=&Plugin status