@@ -1,5 +1,4 @@
 importingLinks=Importing links from %s...
-successfullyImported=Links were successfully imported to %s
 noLinksFound=The file contains no links.
 fileIsCorruptException=The file cannot be opened. It might be corrupt or of unknown format.
 notSupportedException=The file is not supported.
