@@ -203,3 +203,5 @@ labelVersion.text=Versio:
 labelServices.text=Palvelut:
 labelPriority.text=Prioriteetti:
 labelMaxConnections.text=Maks. latauksia:
+
+checkUseRecycleBin.text=K\u00e4yt\u00e4 j\u00e4rjestelm\u00e4n roskakoria tiedostojen poistamiseen
